<resources>
    <string name="app_name">basketball</string>
    <string name="teamname">teamA</string>
    <string name="score">0</string>
    <string name="btn3">+3 points</string>
    <string name="btn2">+2 points</string>
    <string name="btn1">+1 point</string>
    <string name="reset">reset</string>
    <string name="teamB">teamB</string>
    <string name="hint">input RMB</string>
    <string name="app_name2">rate transfer</string>
    <string name="btndollar">dollar</string>
    <string name="btneuro">euro</string>
    <string name="btnwon">won</string>
</resources>
